# indie-studio

./: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  server
assets/fonts/: font.xml
assets/maps/: azerty.txt  map.txt  mdr.txt  robzz
assets/models/: bigbomber.mtl  bombsBonus.3ds  eclair.3ds  ghost.3ds  lightning.3ds  lightning.md2
assets/models/bomb/: Bomb.mtl
assets/models/island/: island.3ds
assets/models/menu/: azerty.xcf  prbenji.xcf
assets/models/palmier/: palmier.3ds
assets/models/vehicules/: D1207A061.mtl  boat.max  raft.3ds
games/: .gitignore
include/: Camera.hpp  Chat.hpp  Clock.hpp  Core.hpp  Graphism.hpp  Macro.hpp  ManageStrings.hpp  Map.hpp  Options.hpp  Server.hpp  Socket.hpp  Window.hpp
include/AI/: AI.hpp  Astar.hpp
include/Events/: EventManager.hpp  Events.hpp
include/GUI/: Menu.hpp  SplashScreen.hpp
include/Game/: Bomb.hpp  Game.hpp  GameBackUp.hpp  Object.hpp  Player.hpp
include/Local/: LocalGame.hpp
include/Utility/: ArgumentsCLI.hpp
srcs/Client/: main.cpp
srcs/Client/AI/: AI.cpp
srcs/Client/Bombs/: Bombs.cpp
srcs/Client/Chat/: Chat.cpp
srcs/Client/Connection/: ConnectionWithServer.cpp
srcs/Client/Core/: Core.cpp
srcs/Client/Events/: EventManager.cpp  Events.cpp
srcs/Client/GUI/: Menu.cpp  SplashScreen.cpp
srcs/Client/Game/: Game.cpp  GameInfos.cpp  ManageMap.cpp
srcs/Client/Graphism/: Camera.cpp  Decor.cpp  Graphism.cpp  Window.cpp
srcs/Client/Local/: Backup.cpp  LocalGame.cpp
srcs/Client/Map/: Map.cpp  MapEdit.cpp
srcs/Client/Player/: Player.cpp  PlayerActions.cpp
srcs/Server/: LaunchServer.cpp
srcs/Shared/: Clock.cpp  ManageStrings.cpp  Server.cpp  Socket.cpp
srcs/Shared/AI/: AI.cpp  Astar.cpp
